# venmo-auto-transfer

./: README.md  pyproject.toml  venmo_auto_transfer.bash  venmo_auto_transfer.py
